# CNN_Architectures_Analysis

./: .gitignore  README.md  main.py  pyproject.toml
configs/: cnn_config.yaml  data_config.yaml
results/cnn/: experiment_summary.json
src/ClassicCNN/: model.py  trainer.py
src/utils/: config.py  data_loader.py
tests/: cnn_experiment.py
